syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "internal/app/grpc/proto/common.proto";
import "internal/app/grpc/proto/competition.proto";
import "internal/app/grpc/proto/requests.proto";
import "internal/app/grpc/proto/round.proto";
import "internal/app/grpc/proto/season.proto";
import "internal/app/grpc/proto/team.proto";
import "internal/app/grpc/proto/venue.proto";

service FixtureService {
  rpc ListSeasonFixtures(SeasonFixtureRequest) returns (stream Fixture) {}
  rpc FixtureByID(FixtureRequest) returns (Fixture) {}
}

message Fixture {
  int64 id = 1;
  Competition competition = 2;
  Season season = 3;
  Team home_team = 4;
  Team away_team = 5;
  Round round = 6;
  Venue venue = 7;
  Date date_time = 8;
}
